Dark mode style fixes

--- a/css/dark-mode.styl
+++ b/css/dark-mode.styl
@@ -12,3 +12,17 @@ html.dark-mode
 
   #footer
     background: #303030
+
+  .zooniverse-profile
+    > nav button[name="turn-page"]
+      background: #333
+
+      &:hover
+        background: $green
+
+    .zooniverse-paginator
+      .controls button[name="page"]
+        background: #333
+
+        &:hover
+          background: $green
